fix icons dark mode

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -73,4 +73,8 @@ a:not(:last-child) {
     background: black;
     color: white;
   }
+
+  a {
+    color: white;
+  }
 }
